--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "url": "https://github.com/katronquillo/grimm/issues"
   },
   "scripts": {
-    "start": "node ./server/index.js"
+    "server": "node ./server/index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "homepage": "https://github.com/katronquillo/grimm#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "crawler": "^1.3.0",
     "elasticlunr": "^0.9.5",
